crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__fstring_escaped_character.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..8,
            value: FString(
                ExprFString {
                    range: 0..8,
                    value: FStringValue {
                        inner: SinglePart(
                            FString(
                                FString {
                                    range: 0..8,
                                    elements: [
                                        Literal(
                                            FStringLiteralElement {
                                                range: 2..4,
                                                value: "\\",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 4..7,
                                                expression: Name(
                                                    ExprName {
                                                        range: 5..6,
                                                        id: Name("x"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
