crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__hts_alias.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..9,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..9,
                    value: StringLiteralValue {
                        inner: SinglePart(
                            StringLiteral {
                                range: 0..9,
                                value: "\u{88}",
                                flags: StringLiteralFlags {
                                    quote_style: Double,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
