crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_f_string_concat_2.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..17,
            value: FString(
                ExprFString {
                    range: 0..17,
                    value: FStringValue {
                        inner: MultiPart(
                            [
                                Literal(
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 9..17,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 11..16,
                                                    value: "world",
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Single,
                                            prefix: Regular,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
